Add login, home, help, about, add/remove static pages

--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -3,7 +3,7 @@
   <h1>Welcome to the Junior Master Gardener's Game</h1>
 
   <h2>
-    This will eventually be the home page.
+    This is where the awesome login Drew is making should go.
   </h2>
 
 </div>
