--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, "login") %>
+<% provide(:title, "Add and Remove Student's") %>
 <div class="center jumbotron">
   <h1>Welcome to the Junior Master Gardener's Game</h1>
 
   <h2>
-    This will eventually be the home page.
+    This is where you will add and rmeove students.
   </h2>
 
 </div>
