--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -1,9 +1,14 @@
 <% provide(:title, "Add and Remove Student's") %>
-<div class="center jumbotron">
-  <h1>Welcome to the Junior Master Gardener's Game</h1>
-
   <h2>
-    This is where you will add and rmeove students.
+    This is where you will add and remove students.
   </h2>
 
+  <table>
+  	<tr>
+  		<th>StudentID</th>
+  		<th>Date Created</th>
+  		<th></th>
+  	</tr>
+  </table>
+<li><%= link_to "Add a Student",  '#' %></li>
 </div>
