--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, "login") %>
-<div class="center jumbotron">
   <h1>Welcome to the Junior Master Gardener's Game</h1>
 
   <h2>
     This will eventually be the home page.
   </h2>
-
+  <li><%= link_to "Add and Remove Students",  add_remove_student_path %></li>
 </div>
