Changes made to table format

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,3 +94,13 @@ footer {
       }
     }
   }
+
+  /* table */
+
+  #my_table {
+    border-radius: 20px;
+    background-color: transparent;
+    color: black;
+    width: 500px;
+    text-align: center;
+  }
