More changes made to the table on the Add/Remove Student page

--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -17,8 +17,54 @@
         <tr><td>Lewis835</td><td>10-12-15</td></tr>
         <tr><td>Fogle835</td><td>10-12-15</td></tr>
         <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td></tr>
       </tbody>
     </table>
   </div>
 </div>
 <li><%= link_to "Add a Student",  '#' %></li>
+
