--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -1,70 +1,60 @@
 <% provide(:title, "Add and Remove Student's") %>
   <h2>
-    This is where you will add and remove students.
+    Add or Remove Students
   </h2>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container"> 
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add Student</button>
 
-<div class="scrollableContainer">
-  <div class="scrollingArea">
-    <table class="studentID">
-  	  <thead>
-        <tr>
-  		    <th><div class="studentID">StudentID</div></th>
-  		    <th><div class="dateCreated">Date Created</div></th>
-          <th><div class="delete">Delete</div></th>
-  	    </tr>
-      </thead>
-      <tbody>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-        <tr><td>Lewis835</td><td>10-12-15</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Add Student</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form">
+            <div class="form-group">
+              <label for="usr">UserID:</label>
+              <input type="text" class="form-control" id="usr">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Confirm</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div> 
 </div>
-<li><%= link_to "Add a Student",  '#' %></li>
+<p></p>                                         
+  <table class="table table-striped table-bordered table-hover table-condensed">
+    <thead>
+      <tr>
+        <th>StudentID</th>
+        <th>Date Created</th>
+        <th>Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr><td>Lewis835</td><td>10-12-15</td><td>Delete</td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td><td>Delete</td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td><td>Delete</td></tr>
+    </tbody>
+  </table>
+</div>
 
+</body>
+</html>
