Add delete button to Add/Remove Student table

--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -49,9 +49,9 @@
       </tr>
     </thead>
     <tbody>
-        <tr><td>Lewis835</td><td>10-12-15</td><td>Delete</td></tr>
-        <tr><td>Fogle835</td><td>10-12-15</td><td>Delete</td></tr>
-        <tr><td>Walker835</td><td>10-12-15</td><td>Delete</td></tr>
+        <tr><td>Lewis835</td><td>10-12-15</td><td><button type="button" class="btn btn-danger btn-xs">Delete</button></td></tr>
+        <tr><td>Fogle835</td><td>10-12-15</td><td><button type="button" class="btn btn-danger btn-xs">Delete</button></td></tr>
+        <tr><td>Walker835</td><td>10-12-15</td><td><button type="button" class="btn btn-danger btn-xs">Delete</button></td></tr>
     </tbody>
   </table>
 </div>
