--- a/app/views/static_pages/add_remove_student.html.erb
+++ b/app/views/static_pages/add_remove_student.html.erb
@@ -11,7 +11,7 @@
 <body>
 <div class="container"> 
   <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add Student</button>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add Student</button>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
