--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,6 @@
 <footer class="footer">
+<br style="margin-bottom:140px;"/>
+
   <small>
     The JMG game by Daniel, Drew, and Kyle.</a>
   </small>
