--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
-<% provide(:title, "about") %>
-<h1>about</h1>
-<p>This is where we brag about ourselves.</p>
+<% provide(:title, "About") %>
+<h1>About Us</h1>
+<p>Daniel, Drew, and Kyle are the ace programmers who developed this website.</p>
+<p>All three are currently enrolled in Dr. Wahjudi's CS 305 class at Marshall University. </p>
