--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "login") %>
-  <h1>Welcome to the Junior Master Gardener's Game</h1>
+  <h1>Welcome, <%= current_user.name %></h1>
 
   <h2>
     This is our incomplete home page. Enjoy
