--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,18 @@
+<html>
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Junior Master Gardener", root_path, id: "logo" %>
-    <nav>
+    <div class="navbar-header">
+      <%= link_to "Junior Master Gardener", root_path, id: "logo" %>
+	  <button class = "navbar-toggle" data-toggle = "collapse"data-target = ".navHeaderCollapse">
+	  <span class = "icon-bar"></span>
+	  <span class = "icon-bar"></span>
+	  <span class = "icon-bar"></span>
+	  </button>
+	</div>
+	<div class ="collapse navbar-collapse navHeaderCollapse">
+      
       <ul class="nav navbar-nav navbar-right">
+	  
 	  <% if logged_in? %>
         <li><%= link_to "Home",   home_path %></li>
         <li><%= link_to "Help",   help_path %></li>
@@ -13,6 +23,12 @@
 		<li><%= link_to "Log in", root_path %></li>
 	  <% end %>
       </ul>
-    </nav>
+    
+	</div>
+	
   </div>
 </header>
+</html>
+
+
+
