--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
       
       <%= yield %>
 	  
-	  <%= render 'layouts/footer' %>
+	  <%= render 'layouts/footer' unless @in_game %>
+	  
+	  
       
     </div>
 
