--- a/app/views/students/student_select.html.erb
+++ b/app/views/students/student_select.html.erb
@@ -1,24 +1,22 @@
-<% provide(:title, "Add and Remove Student's") %>
+<% provide(:title, "Student Select") %>
   <h2>
-    Manage Students
+    Select a Student to Play
   </h2>
 
-<%= link_to "Add Student", add_student_path, class: "btn btn-primary btn-s" %>
-<p></p>
+
                                            
   <table class="table table-striped table-bordered table-hover table-condensed">
     <thead>
       <tr>
         <th>StudentID</th>
-        <th>Date Created</th>
-        <th>Delete</th>
+
       </tr>
     </thead>
     <tbody>
         <% @student.each do |student| %>
 		<% if student.active? %>
         
-          <tr><td><%= student.name %></td><td><%= student.created_at %></td><td><%= link_to "Remove", student, method: :delete, class: "btn btn-danger btn-xs" %></td></tr>
+          <tr><td><%= student.name %></td><td><%= link_to "Play   ", chapter_four_path, class: 'btn btn-success btn-xs'  %></td></tr>
         
 		<% end %>
         <% end %>
