--- a/app/views/students/list.html.erb
+++ b/app/views/students/list.html.erb
@@ -6,9 +6,8 @@
 <%= link_to "Add Student", add_student_path, class: "btn btn-primary btn-s" %>
 <p></p>
        
-<input type="checkbox" id="xxx" name="xxx" onclick="showInactive" />Show inactive students.
-
-  <table class="table table-striped table-bordered table-hover table-condensed">
+<input type="checkbox" id="Inactive" name="Inactive" value="1" checked >Hide inactive students.
+  <table class="table table-striped table-bordered table-hover table-condensed" id="studentTable">
     <thead>
       <tr>
         <th><%= sortable "name", "StudentID" %></th>
@@ -19,12 +18,20 @@
     </thead>
     <tbody>
         <% @student.each do |student| %>
-        <% if student.active? %>
+        <% if student.active == true %>
           <tr>
             <td><%= student.name %></td>
             <td><%= student.created_at %></td>
             <td><%= student.active %></td>
-            <td><%= link_to "Add/Remove", student, method: :delete, class: "btn btn-danger btn-xs" %></td>
+            <td><%= link_to "Deactivate", student, method: :delete, class: "btn btn-danger btn-xs" %></td>
+          </tr>
+        <% end %>
+        <% if student.active == false %>
+          <tr class="hidethis">
+            <td><%= student.name %></td>
+            <td><%= student.created_at %></td>
+            <td><%= student.active %></td>
+            <td><%= link_to "Reactivate", student, method: :delete, class: "btn btn-success btn-xs" %></td>
           </tr>
         <% end %>
         <% end %>
@@ -34,15 +41,5 @@
   </table>
 
 </div>
-<script>
-function showInactive() {
-  if (document.getElementById('xxx').checked)
-  {
-    document.getElementById('')
-  } else {
-
-  }
-}
-</script>
 </body>
 </html>
