The checkbox to show inactive students on the add/remove student page will now have its state persist upon page refresh

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -9,8 +9,8 @@
       <%= f.label :StudentID, "Study ID" %>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :Active? %>
-      <%= f.text_field :active, class: 'form-control' %>
+      <%= f.label :Active %>
+      <%= f.check_box :active %>
       <p></p>
       <%= f.submit "Create Student", class: "btn btn-primary" %>
       <%= link_to "Cancel", add_remove_student_path, class: "btn btn-danger" %>
