--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -1,6 +1,6 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-input[type=checkbox]:checked ~ #studentTable tr.hidethis {
+input[type=checkbox]:not(:checked) ~ #studentTable tr.hidethis {
 	display: none;
 }
