--- a/app/views/students/list.html.erb
+++ b/app/views/students/list.html.erb
@@ -6,7 +6,7 @@
 <%= link_to "Add Student", add_student_path, class: "btn btn-primary btn-s" %>
 <p></p>
        
-<input type="checkbox" id="Inactive" name="Inactive" value="1" checked >Hide inactive students.
+<input type="checkbox" id="Inactive" name="Inactive" value="1" >Show inactive students.
   <table class="table table-striped table-bordered table-hover table-condensed" id="studentTable">
     <thead>
       <tr>
@@ -41,5 +41,50 @@
   </table>
 
 </div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
+
+    <script>
+      function handleButtonClick(button){
+        if ($(button).text().match("Check all")){
+          $(":checkbox").prop("checked", true)
+        } else {
+          $(":checkbox").prop("checked", false)
+        };
+        updateButtonStatus();
+      }
+      function updateButtonStatus(){
+        var allChecked = $(":checkbox").length === $(":checkbox:checked").length;
+        $("button").text(allChecked? "Uncheck all" : "Check all");
+      }
+      function updateCookie(){
+        var elementValues = {};
+        $(":checkbox").each(function(){
+          elementValues[this.id] = this.checked;
+        });
+        elementValues["buttonText"] = $("button").text();
+        $.cookie('elementValues', elementValues, { expires: 7, path: '/' })
+      }
+      function repopulateFormELements(){
+        var elementValues = $.cookie('elementValues');
+        if(elementValues){
+          Object.keys(elementValues).forEach(function(element) {
+            var checked = elementValues[element];
+            $("#" + element).prop('checked', checked);
+          });
+          $("button").text(elementValues["buttonText"])
+        }
+      }
+      $(":checkbox").on("change", function(){
+        updateButtonStatus();
+        updateCookie();
+      });
+      $("button").on("click", function() {
+        handleButtonClick(this);
+        updateCookie();
+      });
+      $.cookie.json = true;
+      repopulateFormELements();
+    </script>
 </body>
 </html>
