--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -16,6 +16,7 @@
   <div id="menu1" class="tab-pane fade">
     <h3>Edit Students</h3>
     <li><%= link_to "Add and Remove Students",  add_remove_student_path %></li>
+    <li><%= link_to "Add and Remove Teachers",  add_remove_teacher_path %></li>
   </div>
   <div id="menu2" class="tab-pane fade">
     <h3>Test Scores</h3>
