--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1>New Student</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -9,8 +9,8 @@
       <%= f.label :StudentID, "Study ID" %>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :Active? %>
-      <%= f.text_field :active, class: 'form-control' %>
+      <%= f.label :Active %>
+      <%= f.check_box :active %>
       <p></p>
       <%= f.submit "Create Student", class: "btn btn-primary" %>
       <%= link_to "Cancel", add_remove_student_path, class: "btn btn-danger" %>
