--- a/app/views/teachers/list.html.erb
+++ b/app/views/teachers/list.html.erb
@@ -1,37 +1,36 @@
-<% provide(:title, "Add and Remove Student's") %>
+<% provide(:title, "Add and Remove Teachers") %>
   <h2>
-    Manage Students
+    Manage Teachers
   </h2>
 
-<%= link_to "Add Student", add_student_path, class: "btn btn-primary btn-s" %>
+<%= link_to "Add Teacher", add_teacher_path, class: "btn btn-primary btn-s" %>
 <p></p>
        
-<input type="checkbox" id="Inactive" name="Inactive" value="1">Show inactive students.
-  <table class="table table-striped table-bordered table-hover table-condensed" id="studentTable">
+<input type="checkbox" id="Inactive" name="Inactive" value="1">Show inactive teachers.
+  <table class="table table-striped table-bordered table-hover table-condensed" id="teacherTable">
     <thead>
       <tr>
-        <th><%= sortable "name", "StudentID" %></th>
+        <th><%= sortable "name", "Teacher's Name" %></th>
         <th><%= sortable "created_at", "Date Created" %></th>
         <th><%= sortable "active", "Active?" %></th>
         <th>Delete</th>
       </tr>
     </thead>
     <tbody>
-        <% @student.each do |student| %>
-        <% if student.active == true %>
+        <% @teacher.each do |teacher| %>
+        <% if teacher.admin == true %>
           <tr>
-            <td><%= student.name %></td>
-            <td><%= student.created_at %></td>
-            <td><%= student.active %></td>
-            <td><%= link_to "Deactivate", student, method: :delete, class: "btn btn-danger btn-xs" %></td>
+            <td><%= teacher.name %></td>
+            <td><%= teacher.created_at %></td>
+            <td><%= teacher.admin %></td>
           </tr>
         <% end %>
-        <% if student.active == false %>
+        <% if teacher.admin == false %>
           <tr class="hidethis">
-            <td><%= student.name %></td>
-            <td><%= student.created_at %></td>
-            <td><%= student.active %></td>
-            <td><%= link_to "Reactivate", student, method: :delete, class: "btn btn-success btn-xs" %></td>
+            <td><%= teacher.name %></td>
+            <td><%= teacher.created_at %></td>
+            <td><%= teacher.admin %></td>
+
           </tr>
         <% end %>
         <% end %>
