--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "login") %>
+<% provide(:title, "Home") %>
   <h1>Welcome, <%= current_user.name %></h1>
 
   <ul class="nav nav-tabs">
@@ -24,6 +24,14 @@
   </div>
   <div id="menu2" class="tab-pane fade">
     <h3>Test Scores</h3>
+	 <div class="dropdown">
+  	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Students
+  	<span class="caret"></span></button>
+  	<ul class="dropdown-menu">
+    		
+		<li class="divider"></li>
+		</ul?
+		</div>
 <table class="table table-striped table-bordered table-hover table-condensed">
       <thead>
         <tr>
