--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,21 +2,25 @@
 @import "bootstrap";
 @import "bourbon";
 
-.navbar-custom {
+.navbar-default {
     background-color:#229922;
     color:#00FF33;
     border-radius:0;
 }
 
-.navbar-custom .navbar-nav > li > a {
+.navbar-default .navbar-nav > li > a {
     color:#fff;
 }
-.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
+.navbar-default .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
     color: #ffffff;
     background-color:transparent;
 }
-.navbar-custom .navbar-brand {
+.navbar-default .navbar-brand {
     color:#eeeeee;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
 }
 
 body {
