--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <html>
-<header class="navbar navbar-fixed-top navbar-custom">
+<header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
     <div class="navbar-header">
       <%= link_to "Junior Master Gardener", root_path, id: "logo" %>
