--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -17,39 +17,49 @@
     <h3>Edit Students</h3>
     <li><%= link_to "Add and Remove Students",  add_remove_student_path %></li>
 
+	<% if Teacher.current_teacher.admin == true %>
 	<p></p> <h3>Edit Teachers</h3>
 	<li><%= link_to "Add and Remove Teachers",  add_remove_teacher_path %></li>
+    <% end %>
+    <p></p><h3>My Account</h3>
+    <li><%= link_to "Change Username/Password",  edit_teacher_path(Teacher.current_teacher) %></li>
 
 
   </div>
   <div id="menu2" class="tab-pane fade">
-    <h3>Test Scores</h3>
-	 <div class="dropdown">
-  	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Students
-  	<span class="caret"></span></button>
-  	<ul class="dropdown-menu">
-    		
-		<li class="divider"></li>
-		</ul?
-		</div>
+    <h3>Recent Scores</h3>
+	
+	  <div class="form-group">
+  <label for="sel1">Select Chapter:</label>
+  <select class="form-control" id="sel1">
+    <option>Chapter 4</option>
+    
+  </select>
+</div>
+
+	 
 <table class="table table-striped table-bordered table-hover table-condensed">
       <thead>
         <tr>
           <th>StudentID</th>
-          <th>Chapter 4</th>
+          <th>Score</th>
         </tr>
       </thead>
       <tbody>
           <% @student.each do |student| %>
 		  <% if student.active? %>
         
-            <tr><td><%= student.name %></td></tr>
+            <tr>
+			<td><%= student.name %></td>
+			<td><%= mostRecentScore(student.id) %></td>
+			</tr>
         
 		  <% end %>
           <% end %>
         </ul>
     </tbody>
   </table>
+  <li><%= link_to "All Scores",  all_scores_path %></li>
 </div>
     </div>
 
