--- a/app/views/games/student_select.html.erb
+++ b/app/views/games/student_select.html.erb
@@ -1,18 +1,15 @@
 <% provide(:title, "Play") %>
 <h1 class =  center jumbotron>Select Student</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class = "row">
+  <div class = "col-md-6 col-md-offset-3">
     <%= form_for(:game, url: play_path) do |f| %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-      
-
-      <%= f.submit "Play", class: "btn btn-primary" %>
-    <% end %>
-
-    
-  </div>
-</div>
+	  <%= f.label :student %>
+	  <%= f.collection_select :student_id, @student,:id,:name, {include_blank: false}, {class: "form-control"} %>
+	  
+	  <p></p>
+	  <%= f.submit "Play", class: "btn btn-success" %>
+	 <% end %>
+	 
+	 </div>
+	</div>
