--- a/app/views/games/chapter_four.html.erb
+++ b/app/views/games/chapter_four.html.erb
@@ -22,6 +22,7 @@ function preload() {
 	game.load.image('grub', 'assets/grub.png');
 	game.load.image('mite', 'assets/mite.png');
 	game.load.image('wasp', 'assets/wasp.png');
+	game.load.image('cw', 'assets/Cornworm4.png');
     game.load.image('net', 'assets/net.png', 32, 48);
 
 }
@@ -121,8 +122,8 @@ function create() {
 	
 	aphid = pests.create(randomX(), randomY(), 'aphid');
 	aphid.scale.setTo(1.8,1.8);
-	var mite = pests.create(randomX(), randomY(), 'mite');
-    mite.scale.setTo(.5,.5);
+	var cw = pests.create(randomX(), randomY(), 'cw');
+    //mite.scale.setTo(.5,.5);
 	
 	
 
@@ -143,6 +144,8 @@ game.physics.arcade.collide(player, platforms);
     //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
     game.physics.arcade.overlap(player, friends, collectFriend, null, this);
 	game.physics.arcade.overlap(player, pests, collectPest, null, this);
+	game.physics.arcade.overlap(pests, friends, respawnPest, null, this);
+	game.physics.arcade.overlap(friends, pests, respawnFriend, null, this);
 
     //  only move when you click
     if (game.input.activePointer.isDown)
@@ -190,17 +193,25 @@ function collectPest (player, pest) {
 	{
 	   newBugs();
 	}
+	}
 
-
+function respawnFriend(friend){
+friend.kill();
 }
+
+function respawnPest(pest){
+pest.kill();
+}
+	
+
 
 //Generate random spawns
 function randomX(){
-     return Math.floor(Math.random()*(780-25+1)+25);
+     return Math.floor(Math.random()*(760-45+1)+45);
 }
 
 function randomY(){
-     return Math.floor(Math.random()*(550-25+1)+25);
+     return Math.floor(Math.random()*(530-45+1)+45);
 }
 
 function newBugs () {
