--- a/app/views/games/chapter_four.html.erb
+++ b/app/views/games/chapter_four.html.erb
@@ -36,15 +36,15 @@
   var score = 0;
   var scoreText;
   var bugCounter = 0;
-	var positionArrayX = [39,50,62,85,115,143,167,194,238,274,299,340,360,399,437,486,546];
-  var positionArrayY = [20,43,62,85,115,143,167,194,238,274,299,320,340,360,399,437,486];
+	var positionArrayX = [19,50,70,90,110,130,150,170,190,210,230,250,270,290,310,330,350,370,390,410,430,450,470,490,510,530,550,570,590,615,635,675,699,723,732,750];
+  var positionArrayY = [20,43,60,80,100,120,140,160,180,200,220,240,260,280,300,320,340,360,380,400,440,460,480,500,520];
   Phaser.Utils.shuffle(positionArrayX);
 	Phaser.Utils.shuffle(positionArrayY);
 	for (var i = 0; i < 16; i++)
 	{
-		
-			console.log("X: " + positionArrayX[i])
-			console.log("Y: " + positionArrayY[i])
+
+			console.log(i + " X: " + positionArrayX[i]);
+			console.log(i + " Y: " + positionArrayY[i]);
 
 	}
 
